fix(uiSelect): add class to dropdown instead of simple opacity change  to remove flicker
Previous behaviour and new one with punks are in issue #1583.

--- a/src/common.css
+++ b/src/common.css
@@ -17,6 +17,15 @@
   top: 0px !important;
 }
 
+/* send offscreen without breaking sizes*/
+.ui-select-detached {
+    position: fixed !important;
+    opacity: 0 !important;
+    visibility: hidden;
+    top: 100% !important;
+    left: 100% !important;
+    z-index: -1 !important;
+}
 
 .ui-select-choices-row:hover {
   background-color: #f5f5f5;
